yamls/nginx-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /config/.*
        backend:
          serviceName: config
          servicePort: 8888
      - path: /hotels/.*
        backend:
          serviceName: hotels-service
          servicePort: 8073
      - path: /breweries/.*
        backend:
          serviceName: breweries-service
          servicePort: 8072
      - path: /hotel-breweries/.*
        backend:
          serviceName: hotel-breweries-service
          servicePort: 8074
      - path: /*
        backend:
          serviceName: grafana
          servicePort: 3000
